kubernetes/keycloak/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    kubernetes.io/metadata.name: keycloak
